syntax = "proto3";

option csharp_namespace = "Cope.SpaceRogue.Travelling.API.Proto";

service TravelService {
  rpc GetShips (Empty) returns (GetShipsReply);
  rpc GetShip (GetShipRequest) returns (GetShipReply);
  rpc GetPosition (GetPositionRequest) returns (GetPositionReply);
  rpc GetPlanets (Empty) returns (GetPlanetsReply);
  rpc GetPlanet (GetPlanetRequest) returns (GetPlanetReply);
}

message Empty 
{ 
	
}

message GetPlanetsReply {
    repeated GetPlanetReply Planets = 1;
}

message GetPlanetRequest 
{ 
	string PlanetId = 1;
}

message GetShipRequest 
{ 
	string ShipId = 1;
}

message GetPlanetReply {
    string Id = 1;
    string Name = 2;
    int32 PosX = 3;
	int32 PosY = 4;
	int32 PosZ = 5; 
}

message GetPositionReply {
	int32 PosX = 1;
	int32 PosY = 2;
	int32 PosZ = 3;
}

message GetPositionRequest {
   repeated string shipIds = 1;
   repeated string planetIds = 2;
}

message GetShipsReply {
   repeated GetShipReply ships = 1;
}

message AddShipRequest {
	string ShipId = 1;
	string Name = 2;
	string PlayerId = 3;
}

message GetShipReply {
	string ShipId = 1;
	string Name = 2;
	int32 PosX = 3;
	int32 PosY = 4;
	int32 PosZ = 5;
}